# gtsam-docker-template-project

./: CMakeLists.txt  Dockerfile  README.md  main.cpp
